# multi-fits-cubes-py

./: .gitignore  LICENSE  README.md  pyproject.toml
multi_fits_cubes/: cloud.py  helpers.py  noise.py  plotting.py  test.fits
tests/: Cloud415685_avg_spec.eps  script.py  test_multi_fits_cubes.py
