[tool.poetry]
name = "multi-fits-cubes"
version = "0.1.4.1"
description = ""
authors = ["HRFeng-PMO <hrfeng@pmo.ac.cn>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
astropy = "^4.0.1"
matplotlib = "^3.2.2"
spectral-cube = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
numpy = "^1.18.5"
astropy = "^4.0.1"
matplotlib = "^3.2.2"
spectral-cube = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
